Apply the two-axis review of the packaging
Three of the findings were faults that leave a working-looking machine behind
them, and all three are about a window nobody is watching.

The prerm stopped the service but left the socket listening through an upgrade,
and dpkg unpacks the new payload immediately afterwards — so a connection in
that window activated a privileged JVM on a half-replaced /opt/javafx-login,
which is what that file's header claims to prevent. The postinst wired the
machine before it migrated, so a store from a later build failed an installation
that had already enabled the socket, and the next login would have met a service
that dies on a file it cannot read: exactly the silence ADR-0017 says migrating
at install time exists to avoid. And install.sh assumed a systemd that had
booted, so installing into a container image died half-configured; installed and
running are now separate questions, and what could not be enabled is said out
loud with the command that enables it.

Two smaller ones with the same shape. An account named by SUDO_USER that no
longer exists failed an installation whose group, directory and units were
already correct; it is nobody now, and a person is told what to run. Nothing
held SocketGroup= against the group install.sh creates, though the identical
drift for ListenStream= had a test.

The rest is naming and shape: stage_the_deployment_files carried the one word
ADR-0017 is named after refusing, bringTheFilesUpToDate was public with no
caller outside its package, main tested args.length in three places, and the
prerm had dropped jpackage's DESKTOP_SCRIPTS while keeping a package_type only
the launcher-as-service helpers read.

Code_review.md carries both axes, what was applied, and what was judged and
left — including that "no manual step" is not literally true: a group
membership does not reach a session that already existed.